@@ -769,10 +769,16 @@ Journal::get_path(int i)
         path=m_env->get_log_directory();
 #ifdef HAM_OS_WIN32
         path+="\\";
+        path+="\\";
+        char fname[_MAX_FNAME];
+        char ext[_MAX_EXT];
+        _splitpath(m_env->get_filename().c_str(), 0, 0, fname, ext);
+		path+=fname;
+		path+=ext;
 #else
         path+="/";
-#endif
         path+=::basename(m_env->get_filename().c_str());
+#endif
     }
     if (i==0)
         path+=".jrn0";
