@@ -1,6 +1,8 @@
 Feb 06, 2012 - chris ---------------------------------------------------
 o added a public macro HAM_API_REVISION to allow users to programmatically
     distinguish between new and old interface of ham_txn_begin
+o win32: fixed build issue if HAM_DISABLE_COMPRESSION is defined (thanks,
+    Andy Thalmann (http://www.softdev.ch))
 
 Feb 05, 2012 - chris ---------------------------------------------------
 o the device structure (ham_device_t) was C++-ified; if you use 
